# gpt-subtrans

./: .aiexclude  .gitignore  CLAUDE.md  LICENSE  azure-subtrans.py  claude-subtrans.cmd  claude-subtrans.py  gemini-subtrans.cmd  gemini-subtrans.py  gpt-subtrans.cmd  gpt-subtrans.py  gui-subtrans.cmd  gui-subtrans.py  gui-subtrans.spec  install-bedrock.bat  install-claude.bat  install-deepseek.bat  install-gemini.bat  install-mac.sh  install-mistral.bat  install-openai.bat  install.bat  install.sh  instructions (OCR errors).txt  instructions (Whispered).txt  instructions (brief).txt  instructions (chinese+english).txt  instructions (english-to-chinese).txt  instructions (improve quality).txt  instructions (more natural).txt  instructions (thorough).txt  instructions (transliteration).txt  instructions.txt  llm-subtrans.cmd  llm-subtrans.py  makedistro-mac.sh  makedistro.bat  makedistro.sh  pyproject.toml  readme.md  (+3 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
GUI/: AboutDialog.py  Command.py  CommandQueue.py  EditInstructionsDialog.py  FileCommands.py  FirstRunOptions.py  GUICommands.py  GuiHelpers.py  GuiInterface.py  MainToolbar.py  MainWindow.py  NewProjectSettings.py  ProjectActions.py  ProjectCommands.py  ProjectDataModel.py  ProjectMainWindow.py  ProjectOptions.py  ProjectSelection.py  ProjectToolbar.py  ProjectViewModel.py  ProjectViewModelUpdate.py  ScenesBatchesDelegate.py  ScenesBatchesModel.py  SettingsDialog.py  SubtitleItemDelegate.py  SubtitleListModel.py  SubtransGuiMain.py  SubtransGuiMain.ui  TranslatorOptions.py  subtrans-dark.qss  subtrans.qss
PySubtitle/: Helpers.py  Instructions.py  InternalSubtitle.py  Options.py  ProviderSettingsView.py  SettingsType.py  SrtFileHandler.py  Substitutions.py  SubtitleBatch.py  SubtitleBatcher.py  SubtitleError.py  SubtitleFile.py  SubtitleFileHandler.py  SubtitleLine.py  SubtitlePreprocessor.py  SubtitleProcessor.py  SubtitleProject.py  SubtitleScene.py  SubtitleSerialisation.py  SubtitleTranslator.py  SubtitleValidator.py  Subtitles.py  Translation.py  TranslationClient.py  TranslationEvents.py  TranslationParser.py  TranslationPrompt.py  TranslationProvider.py  VersionCheck.py  demo_architecture.py  version.py
PySubtitleGPT/: ChatGPTClient.py  ChatGPTPrompt.py  ChatGPTTranslation.py  ChatGPTTranslationParser.py  Helpers.py  Options.py  Subtitle.py  SubtitleBatch.py  SubtitleBatcher.py  SubtitleError.py  SubtitleFile.py  SubtitleLine.py  SubtitleProject.py  (+6 more)
(+211 files in other folders)
